--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-plus": "^2.10.2",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
